Thu Aug 17 19:46:22 2000  Brian Gough  <bjg@network-theory.co.uk>

	* swap_source.c (FUNCTION): added function
 	gsl_matrix_transpose_memcpy for transposing rectangular matrices

Sun Jul 16 10:40:15 2000  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c (FUNCTION):  added gsl_matrix_view function for
 	creating a matrix view of an ordinary C array

Sat Jul 15 21:44:22 2000  Brian Gough  <bjg@network-theory.co.uk>

	* changed GSL_EDOM to GSL_EINVAL for invalid matrix size arguments

Sat Jun 17 15:38:30 2000  Brian Gough  <bjg@network-theory.co.uk>

        * fixed up missing MULTIPLICITY factors in various functions 

Sun May 28 12:25:02 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test_complex_source.c (FUNCTION): use binary mode "b" when
 	reading and writing binary files

	* test_source.c (FUNCTION): use binary mode "b" when reading and
 	writing binary files

Thu May  4 20:58:59 2000  Brian Gough  <bjg@network-theory.co.uk>

	* oper.c: added simple arithmetic operations (+,-,*,/,scale,+const)

Wed Apr 26 15:04:22 2000  Brian Gough  <bjg@network-theory.co.uk>

	* prop_source.c (FUNCTION): added function gsl_matrix_isnull

Tue Apr 18 12:51:49 2000  Brian Gough  <bjg@network-theory.co.uk>

	* minmax_source.c (FUNCTION): fixed bug in minmax where
 	coordinates would be incorrect for min or max in the first element

	* test_source.c (FUNCTION): added tests for max/min functions

Thu Apr 13 18:39:27 2000  Brian Gough  <bjg@network-theory.co.uk>

	* minmax.c: added matrix max/min functions

Sat Mar 25 20:29:41 2000  Brian Gough  <bjg@network-theory.co.uk>

	* swap_source.c (FUNCTION): renamed swap_cols to swap_columns, and
 	renamed swap_rowcol to swap_row_column

Tue Mar 21 21:15:22 2000  Brian Gough  <bjg@network-theory.co.uk>

	* matrix_source.c (FUNCTION): added set_all and set_zero functions

Sat Mar 11 11:19:05 2000  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c (FUNCTION): added gsl_matrix_identity to set a