@@ -44,6 +44,7 @@ struct gsl_vector_complex_long_double_struct
   size_t stride;
   long double *data;
   gsl_block_complex_long_double *block;
+  int owner;
 };
 
 typedef struct gsl_vector_complex_long_double_struct gsl_vector_complex_long_double;
